# linux_learning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Storehouse/src/: static_lib.cpp
fileParse/: CMakeLists.txt
fileParse/elf/: elf_formate.md
fileParse/elf/file/: libelftest.i64
fileParse/elf/src/: elf_decription.cpp  elf_encription.cpp  elf_form.md  elf_pars.cpp  elf_test.cpp  elf_test.i  hello_wold  hello_wold.c  hello_wold.i  hello_wold.s  parse_android_so.cpp
helloWorld/: CMakeLists.txt
helloWorld/file/: 2020-06-04-23-22-47-298_ONESHOT_after.pcm  2020-06-04-23-23-52-804_SR_after.pcm  2020-06-04-23-23-57-773_ONESHOT_after.pcm  2020-06-04-23-23-58-965_ONESHOT_after.pcm  2020-06-04-23-24-01-620_SR_after.pcm  2020-06-04-23-28-07-637_ONESHOT_after.pcm  2020-06-04-23-28-34-961_SR_after.pcm  2020-06-04-23-28-40-041_ONESHOT_after.pcm  2020-06-04-23-28-45-381_SR_after.pcm  2020-06-04-23-28-50-088_ONESHOT_after.pcm  2020-06-04-23-29-30-231_ONESHOT_after.pcm  2020-06-04-23-30-10-671_ONESHOT_after.pcm  2020-06-04-23-32-11-296_ONESHOT_after.pcm  2020-06-04-23-32-34-737_ONESHOT_after.pcm  2020-06-04-23-37-11-350_ONESHOT_after.pcm  2020-06-04-23-37-15-031_SR_ONLINE_after.pcm  2020-06-04-23-37-19-684_ONESHOT_after.pcm  2020-06-04-23-37-31-863_ONESHOT_after.pcm  2020-06-04-23-37-33-811_ONESHOT_after.pcm  2020-06-04-23-37-35-000_ONESHOT_after.pcm  2020-06-04-23-38-06-607_ONESHOT_after.pcm  2020-06-04-23-38-10-496_ONESHOT_after.pcm  2020-06-04-23-39-07-810_ONESHOT_after.pcm  2020-06-04-23-39-50-880_SR_ONLINE_after.pcm  2020-06-04-23-46-24-479_ONESHOT_after.pcm  2020-06-04-23-48-00-317_ONESHOT_after.pcm  2020-06-04-23-48-33-767_ONESHOT_after.pcm  2020-06-04-23-48-35-049_ONESHOT_after.pcm  2020-06-04-23-48-50-627_ONESHOT_after.pcm  2020-06-04-23-49-01-663_ONESHOT_after.pcm  2020-06-04-23-54-54-586_ONESHOT_after.pcm  2020-06-04-23-55-25-785_ONESHOT_after.pcm  2020-06-04-23-55-43-670_ONESHOT_after.pcm  2020-06-04-23-56-13-852_ONESHOT_after.pcm  2020-06-04-23-56-33-564_ONESHOT_after.pcm  2020-06-04-23-56-53-898_SR_after.pcm  (+12 more)
hook/: CMakeLists.txt  build.sh
hook/src/: hook.c
ipc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ipc/binder/: CMakeLists.txt
ipc/pipe/src/: log_util.h  static_lib.h
ipc/src/: main.cpp  static_lib.cpp
mem/: CMakeLists.txt
signal/: CMakeLists.txt
soload/: CMakeLists.txt  soLoad
timer/: CMakeLists.txt
(+21 files in other folders)
